--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,17 @@
 *.tar.gz
 *.rar
 
+#UML diagram
+*.puml
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-
 .idea
+Javadoc
+out
+
+*.iml
+
+
+
